Added a link to '500 Letters'
Humorous Index

--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <h1>My First Webpage</h1>
     <p>Hello, world! This is my webpage! I hope you like it!</p>
     <h2>Selections from the CWD Index</h2>
-    <p>500 Letters<br>
-    This is te description for '500 Letters'. I will addthe context later</p>
+    <p><a href="https://500letters.org">500 Letters</a><br>
+    This is te description for '500 Letters'. I will add the context later</p>
   </body>
 </html>
