--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,6 @@
     <p>Hello, world! This is my webpage! I hope you like it!</p>
     <h2>Selections from the CWD Index</h2>
     <p><a href="https://500letters.org">500 Letters</a><br>
-    This is te description for '500 Letters'. I will add the context later</p>
+    This is te description for '500 Letters'. I will add the context later.</p>
   </body>
 </html>
