--- a/Index.html
+++ b/Index.html
@@ -3,10 +3,10 @@
     <title>The Title</title>
   </head>
   <body>
-    <h1>My First Webpage</h1>
-    <p>Hello, world! This is my webpage! I hope you like it!</p>
+    <h1>Freddie's First Webpage</h1>
+    <p>Hello, world! This is my first webpage! I hope you like its offerings!</p>
     <h2>Selections from the CWD Index</h2>
     <p><a href="https://500letters.org">500 Letters</a><br>
-    This is te description for '500 Letters'. I will add the context later.</p>
+    This is the description for '500 Letters'. I will add the context later.</p>
   </body>
 </html>
